--- a/bef/src/pages/EventPlanning.css
+++ b/bef/src/pages/EventPlanning.css
@@ -100,7 +100,7 @@
   color: #000;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 600px), (max-height: 600px) {
   .cancelButton {
     margin-top: 15px;
     padding: 15px 140px;
@@ -135,9 +135,9 @@
   /* .option is for .option component, .options is a div containing option-container and addButton */
 }
 
-@media (max-width: 400px) {
+@media (max-width: 400px) and (max-height: 400px) {
   .option {
-    padding: 15px 100px;
+    padding: 20px 100px;
   }
   .cancelButton {
     padding: 15px 120px;
@@ -160,6 +160,7 @@
 @media (max-width: 320px) {
   .option {
     padding: 15px 80px;
+    max-width: 200px;
   }
   .cancelButton {
     padding: 15px 100px;
